---
created: "2019-03-11T05:40:04.790812796Z"
creator: insta@0.7.1
source: tests/test_derive_input.rs
expression: syntax_tree
---
DeriveInput {
    attrs: [
        Attribute {
            pound_token: Pound,
            style: Outer,
            bracket_token: Bracket,
            path: Path {
                leading_colon: Some(
                    Colon2
                ),
                segments: [
                    PathSegment {
                        ident: Ident(
                            attr_args
                        ),
                        arguments: None
                    },
                    Colon2,
                    PathSegment {
                        ident: Ident(
                            identity
                        ),
                        arguments: None
                    }
                ]
            },
            tts: TokenStream [
                Ident {
                    sym: fn
                },
                Ident {
                    sym: main
                },
                Group {
                    delimiter: Parenthesis,
                    stream: TokenStream []
                },
                Group {
                    delimiter: Brace,
                    stream: TokenStream [
                        Ident {
                            sym: assert_eq
                        },
                        Punct {
                            op: '!',
                            spacing: Alone
                        },
                        Group {
                            delimiter: Parenthesis,
                            stream: TokenStream [
                                Ident {
                                    sym: foo
                                },
                                Group {
                                    delimiter: Parenthesis,
                                    stream: TokenStream []
                                },
                                Punct {
                                    op: ',',
                                    spacing: Alone
                                },
                                Literal {
                                    lit: "Hello, world!"
                                }
                            ]
                        },
                        Punct {
                            op: ';',
                            spacing: Alone
                        }
                    ]
                }
            ]
        }
    ],
    vis: Inherited,
    ident: Ident(
        Dummy
    ),
    generics: Generics {
        lt_token: None,
        params: [],
        gt_token: None,
        where_clause: None
    },
    data: Struct(
        DataStruct {
            struct_token: Struct,
            fields: Unit,
            semi_token: Some(
                Semi
            )
        }
    )
}
